client/src/saas/layout/nav.scss
/*nav bar for homepage before login*/
.navWelcome, .navWorkstation > h2, .navLinks {
    position:absolute;
    color:black;
    right:50px;
    top:40px;
    display:flex;
    flex-direction: column;
    gap:20px;
    font-weight:700;
    font-size: 1.6rem;
    border:none;
    background-color:white;
    cursor:pointer;
}
/*hide hamburger*/
.hamburger {
    display:none;
}
.navLoginRegister > h1, .navWorkstation > h1 {
    font-weight: 800;
    font-size: 1.7rem;
    font-style: italic;
    top:20px;
    position:absolute;
    left:50px;
}
.navLoginRegister  span, .navWorkstation span, .navCV span {
    color:$lightBlue;
    font-size:2.5rem;
}
.navCV > h1 {
    font-weight: 800;
    font-size: 1.7rem;
    font-style: italic;
    top:10px;
    position:absolute;
    left:50px;
}
.navLinks {
    position:absolute;
    color:black;
    right:50px;
    top:20px;
    display:flex;
    flex-direction: column;
    gap:20px;
    font-weight:700;
    font-size: 1.6rem;
    border:none;
    background-color:white;
    cursor:pointer;
 
}
/*hide nav, but display on hover of about section, and on the actual nav*/
.navCV{
    display:none;
}
.aboutDisplay:hover +.navCV{
    display:block;
}
.navCV:hover {
    display:block;
}
.navWorkstation{
    z-index:3;
}
/*set display to none, until the media query requests it*/
.hamburgerNav {
    display:none;
}

